JG-2007-08-03-0: Enhancem.: Use start_sge_bin where possible, cleanup.
                 Review:    RD

CR-2007-08-02-0: Bugfix:    Fixed bug in compile_source():
                            before starting compilation of other compile hooks
                            (used e.g. for arco or hedeby checktree)
                            the GE binaries are installed into product_root
                            directory.
                            Reason: Additional checktrees might need GE
                            distribution directory for building
                 Review:    JG 

MP-2007-08-02-0: Bugfix:    If USER environment variable is not set,
                            installation acts in unexpected ways.
                 Issue:     137
                 Review:    JG

CR-2007-08-01-0: Enhancem.: Added new test for hedeby: show_status
                 Review:    TBD

JG-2007-07-31-0: Enhancem.: Use start_sge_bin where possible, cleanup.
                 Review:    RD

CR-2007-07-31-0: Enhancem.: Fixed some TODOs in hedeby checktree
                 Review:    TBD

JG-2007-07-30-0: Bugfix:    Fixed bugs/issuezilla/2304.
                 Review:    RD

JG-2007-07-27-1: Bugfix:    Tests calling qevent (throughput, various issue
                            tests) failed in CSP mode.
                            Cleanup.
                 Review:    RD

RD-2007-07-27-0: Bugfix:    - fixed dtrace test
                 Enhancem.: - added more complex range list for AR in
                              qmaster/spooling test
                 Review:    JG

JG-2007-07-27-0: Bugfix:    Fixed set_complex, cleanup.
                 Review:    MD

CR-2007-07-26-0: Enhancme.: o added hedeby installation support and a test
                              for issue 67
                 Review:    TBD

CR-2007-07-25-0: Enhancem.: o fixed some parsing errors
                            o added "*.sav.*" and "*.sav" to .cvsignore file